--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+/*
 addict==2.4.0
 albumentations==1.3.0
 einops==0.6.0
@@ -15,7 +16,7 @@ prettytable==3.6.0
 pytorch-lightning==1.9.0
 safetensors==0.2.8
 timm==0.6.12
-torch==1.13.1
+torch
 torchvision==0.14.1
 transformers==4.26.1
 xformers==0.0.16
